--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="upper-container">
-        <h1> Math Partner</h1>
+        <h1> Math Partner123</h1>
         <input type="button" id="historyBtn" value="History" onclick="historyButton()">
         <input type="button" id="savedBtn" value="SAVED SOLUTIONS" onclick="SavedButton()">
     </div>
