--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Math Partner</title>
     <link rel="stylesheet" href="styles.css">
+    <!--Add script link icon-->
     <script src="https://kit.fontawesome.com/eb339bb978.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="upper-container">
-        <h1> Math Partner</h1>
-        <input type="button" id="historyBtn" value="History" onclick="historyButton()">
+        <h1 id="M"> Math Partner</h1>
+        <input type="button" style="width: 300px;" id="historyBtn" value="History" onclick="historyButton()">
         <input type="button" id="savedBtn" value="SAVED SOLUTIONS" onclick="SavedButton()">
     </div>
+    <!--create a empty div show some data here-->
     <div class="historycon">
         
     </div>
@@ -47,7 +49,7 @@
         </div>
 
         <div class="box3">
-            <button type="submit" id="searchBtn" onclick="SearchButton()"><i class="fa-solid fa-magnifying-glass fa-3x"></i></button>
+            <button type="submit" id="searchBtn"  onclick="SearchButton()"><i class="fa-solid fa-magnifying-glass fa-3x"></i></button>
         </div>
         
     </div>
@@ -59,7 +61,6 @@
  
         <button type="reset" id="deleteBtn" onclick="delBtn()"><i class="fa-solid fa-trash-can fa-3x"></i></button>
     </div>
-
     <script src="App.js"></script>
 </body> 
 </html>
